[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/UI.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/InventoryView.gd" type="Script" id=2]
[ext_resource path="res://assets/world/keys/key-green.png" type="Texture" id=3]
[ext_resource path="res://assets/world/keys/key-yellow.png" type="Texture" id=4]
[ext_resource path="res://assets/world/keys/key-blue.png" type="Texture" id=5]
[ext_resource path="res://assets/world/keys/key-purple.png" type="Texture" id=6]
[ext_resource path="res://assets/world/keys/key-red.png" type="Texture" id=7]

[node name="InventoryView" type="VBoxContainer"]
margin_right = 176.0
margin_bottom = 55.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 176.0
margin_bottom = 19.0
text = "Floor Passes"

[node name="Items" type="HBoxContainer" parent="."]
margin_top = 23.0
margin_right = 176.0
margin_bottom = 55.0

[node name="Key1" type="TextureRect" parent="Items"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Key2" type="TextureRect" parent="Items"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Key3" type="TextureRect" parent="Items"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Key4" type="TextureRect" parent="Items"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Key5" type="TextureRect" parent="Items"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
